--- a/static/profile.css
+++ b/static/profile.css
@@ -1,6 +1,6 @@
 :root {
-  --bg-profile: #FFCCB3; 
-  --primary-btn-color: #007D66;
+  --bg-profile: #ffccb3;
+  --primary-btn-color: #007d66;
 }
 
 .profile-template {
@@ -11,7 +11,7 @@
   border-radius: 12px;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%); 
+  transform: translate(-50%, -50%);
   position: absolute;
   z-index: 100;
 }
@@ -38,7 +38,7 @@
 
 .profile-template h4 {
   font-family: -apple-system, sans-serif;
-  white-space: nowrap; 
+  white-space: nowrap;
   font-weight: 500;
 }
 
@@ -58,16 +58,16 @@
   margin-top: 8px;
 }
 
-.profile-template-content input { 
+.profile-template-content input {
   margin: 0;
   padding: 4px 12px;
 }
 
-.profile-template-content input:not(:first-child) { 
+.profile-template-content input:not(:first-child) {
   margin-top: 8px;
 }
 
-.profile-template-content button { 
+.profile-template-content button {
   margin-top: 8px;
   border: 1px solid #eee;
   padding: 8px 16px;
@@ -89,35 +89,46 @@
 }
 
 .profile-container-top {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: var(--bg-profile);
   padding-block: 12px;
   border-top-left-radius: 12px;
   border-top-right-radius: 12px;
+  background-color: var(--bg-profile);
+}
+
+.profile-container-top div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: var(--bg-profile);
+  padding-block: 8px;
 }
 
 .profile-container-top img {
+  display: block;
   width: 120px;
   height: 120px;
   border-radius: 60px;
   border: 4px solid #fff;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
   object-fit: cover;
 }
 
 .profile-container-top h3 {
   color: #fff;
-  margin-top: 8px;  
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  margin-top: 8px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
   text-align: center;
   font-size: 20px;
   font-weight: 400;
   letter-spacing: 1.5px;
 }
 
-.profile-container-content  {
+.profile-container-content {
   display: flex;
   align-items: center;
   justify-content: center;
